# lab-system

./: .gitignore  CONTRIBUTING.md  README-gitlab.md  README.md  TA_SUGGESTIONS.md  TODO.md  autograde-adapted.py  autograde.py  autograde_generic_lab.py  autograde_mini.py  canvas.py  canvas_add_students.py  canvas_gql.py  canvas_instance.py  chardet_tools.py  check_filenames.py  check_symlinks.py  collect_students_from_canvas.py  complexity.py  compression.py  config.py  course.py  course_basics.py  course_new.py  course_old.py  current_course.py  current_course_prelude.py  delete_grading_comments.py  design.txt  dir_glob.py  escaping_formatter.py  event_loop.py  events.py  exam_individualize.py  exam_process_submissions.py  exam_scoring.py  exam_script.py  exam_unregistered_students.py  exam_uploader.py  extra_1.py  (+109 more)
_2020_lp2/: README.md  compression.py  config.py  delete_grading_comments.py  dir_glob.py  get_feedback.py  lab_assignment.py  lab_statistics.py  post_grading.py  print_recent_comments.py  process_submissions.py  submission_fix_lib.py  submission_fixes.py.template  test_lib.py  zip_and_share.py
_2020_lp2_orig/: README.md  autograde-adapted.py  autograde.py  collect_students_from_canvas.py  split_submissions.py
_2021_lp3/: exam_unregistered_students.py  invite-canvas-groups-to-gitlab.py  report_labs.py
_2022_lp2/: check_group_mismatches.py  generate_report.py  report_extra.csv
canvas/: client_rest.py  grading_listener.py  grading_manager.py  graphql.py
chalmers_pdb/: __init__.py  cached_client.py  new_rpcc_client.py  tools.py
dat076/: config.py  lab-system.service
dat151/: .gitignore  config.py  lab-system.service  prelude.py
dat495/: config.py
dat516/: .gitignore  config.py  lab-system.service
dat525/: config.py
dit182/: config.py
exam/: .gitignore  allocate_versions.py  canvas.py  instantiate_template.py
experiments/: classify_gitlab_users.py  guid_to_cid.py  test_email.py
gitlab/: graphql.py  tools.py
gitlab_/: graphql.py  schema.graphql  schema_extract.graphql  tools.py  users_cache.py
google_tools/: documents.py  drive.py  general.py  sheets.py
grading_sheet/: __init__.py  config.py  core.py  listener.py  test.py
graph_ql/: test.py
graphql/: canvas-schema  client.py  gitlab-schema  gitlab.py  test.py  tools.py
graphql_/: canvas.py  client.py  gitlab_schema.graphql  test.py  tools.py
handlers/: general.py  java.py  language.py  python.py  variants.py
java/: config.py  gitlab_config.py
let375/: config.py
live-submissions-table/: core.py  default.css  sort.js
live_submissions_table/: core.py  listener.py  loader.js  sort.js
lp1/: config.py
lp2/: .gitignore  config.py  lab-system.service  prelude.py
lp3/: config.py
lp4/: config.py  file-update-streamer-lindholmen.service  lab-system-johanneberg.service  lab-system-lindholmen.service  lab-system.service  unified-live-submissions-table-loader.html
old/: gitlab_test.py  group_project_old.py
one_off_scripts/: add_missing_members_to_grading_projects.py  canvas_add_students.py  fix_usernames_with_extra_1.py  observe_course_name.py  stats.sh  sync_students.py
python/: config.py  gitlab_config.py
scripts/: get_info.py  utils_gitlab.py
tda283/: config.py  lab-system.service
tda417/: config.py
tda495/: config.py
template/: config.py  file-update-streamer.service  gitlab_config.py.template  lab-system.service  secrets.toml
testers/: general.py  java.py  podman.py  python-proot.py  python_proot.py  unsafe.py
util/: chardet.py  check_symlinks.py  directory_cache.py  enum.py  escaping_formatter.py  gdpr_coding.py  general.py  git.py  gspread.py  hashed_file_cache.py  html.py  http.py  http_logging.py  instance_cache.py  ip.py  item_parser.py  java.py  (+18 more)
(+74 files in other folders)
